[tool.poetry]
name = "airflow-extension"
version = "0.1.0"
description = "Meltano airflow extension"
authors = ["Meltano Team and Contributors"]
maintainers = ["Meltano Team and Contributors"]
readme = "README.md"
license = "Apache 2.0"

packages = [
    { include = "airflow_extension" },
    { include = "echo_extension"},
    { include = "meltano_sdk" },
    { include = "files_airflow_ext"}
]

#include = [
#    "files_airflow_ext/orchestrate/meltano.py",
#    "files_airflow_ext/orchestrate/README.md",
#]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"
structlog = "^22.1.0"
PyYAML = "^6.0"
pydantic = "^1.9.1"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
airflow_extension = 'airflow_extension.main:app'
echo_extension = 'echo_extension.main:app'
